ISSUE253-fix-group-search (#256)
* ISSUE254-fix-get-post

* ISSUE253-fix-group-search

* update test code & update swagger
