# src/swagger/swagger-output.json
@@ -345,7 +345,7 @@
         }
       }
     },
-    "/api/group/list/{last_record_id}": {
+    "/api/group/list": {
       "get": {
         "description": "9개 단위로 그룹 리스트를 조회합니다. groupId, 그룹명, 소개, 멤버 수를 보여줍니다.",
         "summary": "그룹 리스트 조회",
@@ -353,7 +353,7 @@
         "parameters": [
           {
             "name": "last_record_id",
-            "in": "path",
+            "in": "query",
             "type": "integer"
           }
         ],
@@ -409,6 +409,12 @@
             "required": true,
             "type": "string",
             "description": "The search keyword (can be either an integer or a string)"
+          },
+          {
+            "name": "last_record_id",
+            "in": "query",
+            "required": true,
+            "type": "integer"
           }
         ],
         "responses": {
@@ -418,30 +424,25 @@
               "application/json": {
                 "examples": {
                   "successExample": {
-                    "value": [
-                      {
-                        "groupId": "그룹 식별자",
-                        "name": "그룹 이름",
-                        "description": "그룹 소개",
-                        "member": "멤버 수",
-                        "leader": "리더 식별자",
-                        "inviteCode": "그룹 초대 코드",
-                        "inviteExp": "초대 코드 만료일",
-                        "isPublicGroup": "BOOLEAN, 공개 그룹 여부",
-                        "image": "그룹 대표 이미지 주소"
-                      },
-                      {
-                        "groupId": "그룹 식별자",
-                        "name": "그룹 이름",
-                        "description": "그룹 소개",
-                        "member": "멤버 수",
-                        "leader": "리더 식별자",
-                        "inviteCode": "그룹 초대 코드",
-                        "inviteExp": "초대 코드 만료일",
-                        "isPublicGroup": "BOOLEAN, 공개 그룹 여부",
-                        "image": "그룹 대표 이미지 주소"
-                      }
-                    ]
+                    "value": {
+                      "isEnd": "마지막 페이지라면 true, 아니라면 false",
+                      "groups": [
+                        {
+                          "groupId": "그룹 식별자",
+                          "name": "그룹 이름",
+                          "description": "그룹 소개",
+                          "member": "멤버 수",
+                          "image": "그룹 대표 이미지 주소"
+                        },
+                        {
+                          "groupId": "그룹 식별자",
+                          "name": "그룹 이름",
+                          "description": "그룹 소개",
+                          "member": "멤버 수",
+                          "image": "그룹 대표 이미지 주소"
+                        }
+                      ]
+                    }
                   }
                 }
               }
@@ -1968,6 +1969,7 @@
                           "isMine": "작성자가 본인이라면 true, 아니라면 false",
                           "isLiked": "좋아요 여부",
                           "likesCount": "좋아요 개수",
+                          "commentCount": "댓글 개수",
                           "title": "포스트 제목",
                           "content": "포스트 내용",
                           "createdAt": "생성 일자",
@@ -1979,6 +1981,7 @@
                           "isMine": "작성자가 본인이라면 true, 아니라면 false",
                           "isLiked": "좋아요 여부",
                           "likesCount": "좋아요 개수",
+                          "commentCount": "댓글 개수",
                           "title": "포스트 제목",
                           "content": "포스트 내용",
                           "createdAt": "생성 일자",
@@ -2112,6 +2115,7 @@
                         "isMine": "작성자가 본인이라면 true, 아니라면 false",
                         "isLiked": "좋아요 여부",
                         "likesCount": "좋아요 개수",
+                        "commentCount": "댓글 개수",
                         "author": "작성자",
                         "title": "포스트 제목",
                         "content": "포스트 내용",
@@ -2682,6 +2686,7 @@
                           "content": "포스트 내용",
                           "isLiked": "좋아요 여부",
                           "likesCount": "좋아요 개수",
+                          "commentCount": "댓글 개수",
                           "isMine": "작성자가 본인이라면 true, 아니라면 false",
                           "createdAt": "생성 일자"
                         },
@@ -2693,6 +2698,7 @@
                           "content": "포스트 내용",
                           "isLiked": "좋아요 여부",
                           "likesCount": "좋아요 개수",
+                          "commentCount": "댓글 개수",
                           "isMine": "작성자가 본인이라면 true, 아니라면 false",
                           "createdAt": "생성 일자"
                         }
